--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -44,7 +44,9 @@ nav ul li a:hover {
 nav ul li {
 	position: relative;
 }
-
+.active{
+	color: #0077b6;
+}
 nav ul li ul {
 	position: absolute;
 	left: 0;
