--- a/CSS/agile-coach.css
+++ b/CSS/agile-coach.css
@@ -45,12 +45,12 @@ a{
 
 }
 .contact span i{
-    column-gap: 1.5rem  !important;
+    column-gap: 1rem  !important;
 }
-.profile-content img{
-    width: 200px !important;
+/* .profile-content img{
+    width: 15% !important;
 
-}
+} */
 .profile h3{
 font-family: 'Lato', sans-serif;
 font-size: 2.5rem;
@@ -65,7 +65,7 @@ font-size: 2.5rem;
     color: #0F0E0E;
 }
 .settings-icon{
-    width: 6%;
+    width: 10%;
 }
 .home-content{
     margin-top: 3rem !important;
@@ -96,33 +96,30 @@ h5{
     display: flex;
 } */
 .profile-content{
-    width: 45%;
-    
-    margin-top: 2rem !important;
+    width: 45% !important;
+    margin-top: 2rem;
 }
 
 .profile-content img{
-    width:100%;
-    border-radius: 100%;
+    width: 25% !important;
 }
 .profile-text{
-   margin-top: 2.5rem !important; 
+   margin-top: 2.5rem; 
 }
 .profile-text h3{
-    margin-bottom: 1rem !important;
+    margin-bottom: 1rem;
     color: #00B4D8;
 }
 .profile-text p{
-    margin-top: 1rem !important;
-    margin-bottom: 1rem !important;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     display: inline;
-    font-size: 1.75rem !important;
 }
 .card3{
     opacity: 0;
     width: 60% !important;
     top: -60%;
-    left: 50%;
+    left: 63%;
     z-index: 1;
     background-color: #00B4D8;
 }
