--- a/CSS/bookings.css
+++ b/CSS/bookings.css
@@ -28,7 +28,9 @@
 	width: 20%;
 	height: 130vh !important;
 }
-
+#side-bar{
+	height: 145vh !important;
+}
 a {
 	text-decoration: none;
 }
@@ -66,7 +68,7 @@ h5,
 	/* border: 4px solid #ccc;
 	border-top: 4px solid #3498db;
 	border-radius: 50%; */
-	animation: spin 2s linear infinite; /* Use the "spin" animation infinitely */
+	animation: spin 1.5s linear infinite; /* Use the "spin" animation infinitely */
 }
 
 @keyframes spin {
